# R2

./: .env  ANYGRASP_IMPROVEMENT_TASKS.md  BNO055_INTEGRATION_README.md  DOCKER_REMOVAL_PLAN.md  Dockerfile  FOXGLOVE_SETUP.md  GITHUB_MIGRATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_GRASP_WORKFLOW.md  ISAAC_SIM_SETUP.md  LEROBOT_ANYGRASP_HYBRID_INTEGRATION.md  LEROBOT_INTEGRATION_COMPLETE.md  NVIDIA_ISAAC_INTEGRATION_COMPLETE.md  OAK_CAMERA_INTEGRATION_README.md  README.md  README_ANYGRASP_SETUP.md  ROBOFLOW_INTEGRATION.md  TESTING_README.md  TESTING_WITHOUT_HARDWARE_GUIDE.md  TRAINING_INFRASTRUCTURE_IMPROVEMENTS.md  TRAINING_UPDATES_README.md  VIRTUAL_OBJECT_CREATION_ANALYSIS.md  VIRTUAL_OBJECT_CREATION_COMPLETE.md  apt_packages_detailed.txt  docker-compose.yml  install_lerobot.sh  requirements.txt  run_anygrasp_claude.sh  run_anygrasp_claude_v2.sh  run_tests.sh  setup_anygrasp.sh  system_info.txt  system_packages.txt  test_setup.sh  test_system_integration.sh  test_without_hardware.sh  test_xarm_6_integration.py  tmux_anygrasp.sh
.claude/: settings.local.json
deployment/: DEPLOY_INSTRUCTIONS.md  GOOGLE_VM_SETUP_GUIDE.md  README.md  setup_google_vm.sh
foxglove_configs/: anygrasp_enhanced_layout.json  enhanced_training_layout.json  foxglove_bridge_config.yaml  roarm_m3_layout.json
foxglove_panels/: anygrasp_interactive_panel.ts  anygrasp_visualization_panel.ts  dataset_browser_panel.ts  model_comparison_panel.ts  roarm_control_panel.ts  roboflow_configuration_panel.ts  training_dashboard_panel.ts
install/: setup.sh
install/launch_api/share/launch_api/: package.sh  package.xml
install/moveit_servo/include/moveit_servo/: collision_check.h  enforce_limits.hpp  make_shared_from_pool.h  parameter_descriptor_builder.hpp  pose_tracking.h  servo.h  servo_calcs.h  servo_node.h  servo_parameters.h  servo_server.h  status_codes.h  utilities.h
install/moveit_servo/lib/: libmoveit_servo_lib.so.2.5.5  libmoveit_servo_lib_parameters.so.2.5.5
install/moveit_servo/lib/moveit_servo/: fake_command_publisher  servo_node_main  servo_pose_tracking_demo
install/moveit_servo/share/moveit_servo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  (+1 more)
log/: latest_build
modal-webcam-project/: simple_test.py  test_app.py  webcam.py
modal-webcam-project/webcam/: index.html
scripts/: backup_before_migration.sh  comprehensive_verification_suite.py  dummy_hardware_nodes.py
src/oak_camera_integration/: CMakeLists.txt  package.xml
src/oak_camera_integration/config/: oak_1_config.yaml  oak_d_config.yaml
src/oak_camera_integration/launch/: multi_camera_system.launch.py  oak_1.launch.py  oak_d.launch.py
src/oak_camera_integration/oak_camera_integration/: __init__.py
src/oak_camera_integration/scripts/: multi_camera_coordinator.py  oak_camera_manager.py
src/realsense_launch/: CMakeLists.txt  package.xml
src/realsense_launch/config/: d405_config.yaml  d405_side_config.yaml
src/realsense_launch/launch/: d405.launch.py  d405_rgbd.launch.py  d405_with_imu.launch.py  dual_d405.launch.py
src/roarm_anygrasp_integration/: CALIBRATION_README.md  CMakeLists.txt  setup.py
src/roarm_anygrasp_integration/launch/: charuco_calibration.launch.py
src/roarm_anygrasp_integration/roarm_anygrasp_integration/: __init__.py  anygrasp_interactive_node.py  charuco_calibration_node.py  dual_camera_capture_node.py  grasp_coordinator.py  grasp_verification_coordinator.py  hand_eye_calibration_node.py  roboflow_integration_node.py
src/roarm_anygrasp_integration/scripts/: calibration_workflow.py
src/roarm_anygrasp_integration/srv/: CalibrateCamera.srv  ConfigureRoboflow.srv  GetGraspCandidates.srv  SelectGrasp.srv  UploadToRoboflow.srv
src/roarm_isaac_sim/: CMakeLists.txt  package.xml
src/roarm_isaac_sim/config/: isaac_sim_parameters.yaml
src/roarm_isaac_sim/launch/: isaac_sim_complete.launch.py  virtual_object_creation.launch.py
src/roarm_isaac_sim/roarm_isaac_sim/: __init__.py
src/roarm_isaac_sim/scripts/: isaac_sim_launcher.py  synthetic_data_generator.py  virtual_object_controller.py
src/roarm_lerobot_integration/: CMakeLists.txt  package.xml  setup.py
src/roarm_lerobot_integration/launch/: lerobot_anygrasp_hybrid.launch.py
src/roarm_lerobot_integration/models/: .gitkeep
src/roarm_lerobot_integration/roarm_lerobot_integration/: __init__.py
src/roarm_lerobot_integration/scripts/: lerobot_bridge.py  lerobot_dataset_manager.py  lerobot_evaluation_node.py  lerobot_performance_monitor.py  training_workflow_manager.py
src/roarm_lerobot_integration/srv/: EvaluatePolicy.srv  ValidateDataset.srv
src/roarm_lerobot_integration/training/: .gitkeep
src/wrist_imu_integration/: CMakeLists.txt  package.xml
src/wrist_imu_integration/config/: bno055_wrist_config.yaml
src/wrist_imu_integration/launch/: d405_with_imu.launch.py  wrist_imu.launch.py
src/wrist_imu_integration/scripts/: imu_camera_fusion.py  wrist_imu_calibration.py
src/wrist_imu_integration/wrist_imu_integration/: __init__.py
src/xarm_6_description/: CMakeLists.txt
src/xarm_6_description/config/: joint_limits.yaml  joint_names_xarm6.yaml  xarm_6_display.rviz
src/xarm_6_description/launch/: display.launch.py
src/xarm_6_description/urdf/: xarm_6.urdf
src/xarm_6_gazebo/: CMakeLists.txt  package.xml
src/xarm_6_gazebo/config/: xarm_6_gazebo.urdf.xacro
src/xarm_6_gazebo/launch/: xarm_6_gazebo.launch.py
src/xarm_6_gazebo/worlds/: xarm_6_world.world
src/xarm_6_isaac_sim/: package.xml  setup.py
src/xarm_6_isaac_sim/xarm_6_isaac_sim/: xarm_6_isaac_launcher.py  xarm_6_simulation_controller.py
src/xarm_6_launch/: CMakeLists.txt  package.xml
src/xarm_6_launch/config/: xarm_6_integration.py  xarm_6_training_config.yaml
src/xarm_6_launch/launch/: xarm_6_complete.launch.py  xarm_6_gazebo_moveit.launch.py  xarm_6_isaac_training.launch.py
src/xarm_6_moveit_config/: CMakeLists.txt  package.xml
src/xarm_6_moveit_config/config/: kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  xarm_6.srdf  xarm_6.urdf.xacro
src/xarm_6_moveit_config/launch/: demo.launch.py
(+738 files in other folders)
