<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oak_camera_integration</name>
  <version>1.0.0</version>
  <description>OAK-D and OAK-1 camera integration for RoArm M3 multi-camera setup</description>
  
  <maintainer email="roarm@example.com">RoArm Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  
  <!-- DepthAI/OAK dependencies -->
  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>depthai_bridge</exec_depend>
  <exec_depend>depthai_descriptions</exec_depend>
  <exec_depend>depthai_ros_msgs</exec_depend>
  
  <!-- Existing camera integrations -->
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>realsense_launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>