<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeselector="true"?>
<package format="3">
  <name>roarm_isaac_sim</name>
  <version>0.0.0</version>
  <description>NVIDIA Isaac Sim integration for RoArm M3 robotic manipulation</description>
  <maintainer email="robot@example.com">robot</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 Core Dependencies -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Isaac Sim Bridge Dependencies -->
  <depend>isaac_ros_common</depend>
  <depend>isaac_ros_visual_slam</depend>
  <depend>isaac_ros_apriltag</depend>
  <depend>isaac_ros_depth_segmentation</depend>

  <!-- Robot-specific Dependencies -->
  <depend>roarm_description</depend>
  <depend>roarm_moveit</depend>
  <depend>roarm_anygrasp_integration</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>

  <!-- Camera and Sensor Dependencies -->
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>realsense2_camera</depend>

  <!-- Additional Isaac Sim Dependencies -->
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  
  <!-- Virtual Object Creation Dependencies -->
  <depend>visualization_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>